# standard.py

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  env.example  pyproject.toml
scripts/: run-test.sh
src/standardweb3/: __init__.py
src/standardweb3/abis/: erc20.py  matching_engine.py
src/standardweb3/api/: __init__.py
src/standardweb3/api/query/: __init__.py
src/standardweb3/consts/: __init__.py  contracts.py  urls.py
src/standardweb3/contract/: __init__.py
src/standardweb3/examples/: ORDER_MANAGEMENT_README.md  README.md  WEBSOCKET_README.md  api.py  batch_orders_example.py  bot.py  eth_trading_example.py  match_trade.py  order_management_example.py  return_values_example.py  simple_order_example.py  simple_trading.py  simple_websocket_example.py  spot_bars_example.py  spot_orderbook_example.py  spot_orderhistories_example.py  spot_orders_example.py  spot_trades_example.py  trading.py  websocket_example.py
src/standardweb3/examples/csv_orders/: CSV_ORDERS_README.md  csv_limit_orders_example.py  csv_simple_orders_example.py  momo_price_ladder_supply_900M.csv
src/standardweb3/types/: __init__.py  order.py  orderbook.py  orderhistory.py  pair.py  token.py  trade.py  tradehistory.py
src/standardweb3/types/streams/: __init__.py
src/standardweb3/types/streams/bars/: __init__.py  spot.py
src/standardweb3/types/streams/orderbook/: __init__.py  (+1 more)
src/standardweb3/ws/: __init__.py
src/tests/: README.md  conftest.py  test_api.py  test_api.py.bak  test_contract.py  test_setup.py  test_websocket.py
standard/: setup.py
(+6 files in other folders)
