[project]
name = "standardweb3"
version = "0.0.0"
description = "Python Client for Standard"
readme = "README.md"
authors = [
    { name = "Hyungsuk Kang", email = "hskang9@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "asyncio>=3.4.3",
    "eth-account>=0.13.4",
    "python-dotenv>=1.0.1",
    "python-socketio>=5.12.1",
    "web3>=7.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "tox>=4.23.2",
]
