[project]
name = "standardweb3"
version = "0.0.11"
description = "Python Client for Standard"
readme = "README.md"
authors = [
    { name = "Hyungsuk Kang", email = "hskang9@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "asyncio>=3.4.3",
    "eth-abi>=5.1.0",
    "eth-account>=0.13.4",
    "eth-typing>=5.1.0",
    "eth-utils>=5.1.0",
    "httpx>=0.28.1",
    "pre-commit>=4.0.1",
    "python-dotenv>=1.0.1",
    "web3>=7.6.1",
    "websockets>=13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.1.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "tox>=4.23.2",
]
